Updated date at top

--- a/Meta-analysis_stats_outline.Rmd
+++ b/Meta-analysis_stats_outline.Rmd
@@ -4,6 +4,8 @@ author: "Erika Foster"
 date: "1/13/2020"
 output: word_document
 ---
+
+Updated: 20200626
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 GOAL: 
 Meta-analysis on soil organic amendment impact on soil carbon pools > 20cm in depth
